# analise-de-curriculo

./: README.md  pyproject.toml
src/analisa_perfil_e_curriculo/: app.py  crew.py  main.py  report.md
src/analisa_perfil_e_curriculo/config/: agents.yaml  tasks.yaml
