[project]
name = "analisa_perfil_e_curriculo"
version = "0.1.0"
description = "analisa_perfil_e_curriculo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
analisa_perfil_e_curriculo = "analisa_perfil_e_curriculo.main:run"
run_crew = "analisa_perfil_e_curriculo.main:run"
train = "analisa_perfil_e_curriculo.main:train"
replay = "analisa_perfil_e_curriculo.main:replay"
test = "analisa_perfil_e_curriculo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
